sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:9: error: not found: value i
    for (i <- 0 to n - i - 2) {
                       ^