sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var n:Int = getNombreValeurs()
  var echangeCount:Int = -1
  
  while (echangeCount != 0) {
    echangeCount = 0
    
    for (i <- 0 to n - i - 2) {
      if (plusPetit(i + 1, i)) {
        echange(i + 1, i)
        
        echangeCount += 1
      }
    }
  }
}